<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="name_movie">Nama Movie</string>
    <string name="lorem">lorem</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TVShow</string>

    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagemovie">imagemovie</string>
    <string name="sinopsis">Overview</string>
    <string name="title_activity_detailtvshow">Detail TVShow</string>
    <string name="porductionmovie">Release Date : %1$s \n Vote Average : %2$f \n Original Language : %3$s</string>
    <string name="porductiontvshow">Firts Air Date : %1$s \n Vote Average : %2$f \n Original Language : %3$s</string>
    <string name="favorite">Favorite</string>
    <string name="deletefavorite">Delete Favorite</string>
    <string name="search_hint">Search</string>
    <string name="appwidget_text">Favorite List</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">empty</string>
    <string name="image_widget" translatable="false">Image Widget</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="hint_release">Reminder showing the movie that released \n today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="hint_daily_reminder">Reminder for return app</string>
    <string name="setting">Setting</string>
    <string name="release_message">Catalog Movie missing you</string>
</resources>
